added styles with tailwindcss

--- a/public/index.html
+++ b/public/index.html
@@ -39,14 +39,13 @@
           DaverSo
         </p>
         <h3
-          class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10"
+          class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-red-900 sm:text-4xl sm:leading-10"
         >
-          Avocados, The little store
+          Avocados
+          <br>
+          The Little Store
         </h3>
-        <p class="mt-4 max-w-2xl text-xl leading-7 text-gray-500 mx-auto">
-          To be defined...
-        </p>
-        <div id="app"></div>
+        <div id="app" class="grid grid-cols-3 gap-4"></div>
       </div>
     </div>
 
